client/src/index.css
h1.greeting-text {
  font-family: 'Gruppo', cursive;               
}



@font-face {
  font-family: "JosefinSans";
  font-style: normal;
  font-weight: normal;
  src: local("JosefinSans"),
    url("./assests/fonts/JosefinSans-VariableFont_wght.ttf") format("woff");
}

@font-face {
  font-family: "Yeseva";
  font-style: normal;
  font-weight: normal;
  src: local("YesevaOne"),
    url("./assests/fonts/YesevaOne-Regular.ttf") format("woff");
}

@font-face {
  font-family: "Monserrat";
  font-style: normal;
  font-weight: normal;
  src: local("Monserrat"),
    url("./assests/fonts/Montserrat-Regular.ttf") format("woff");
}


@font-face {
  font-family: "Bacalisties";
  font-style: normal;
  font-weight: normal;
  src: local("Bacalisties"),
    url("./assests/fonts/Bacalisties-2OnXo.ttf") format("woff");
}
@font-face {
  font-family: "Agustina Regular";
  font-style: normal;
  font-weight: normal;
  src: local("Agustina Regular"),
    url("./assests/fonts/Agustina.woff") format("woff");
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}
html,
body {
  scroll-behavior: smooth;
  overflow-x: hidden;
}
body {
  margin: 0;
  font: 22px / 25px Montserrat, "Montserrat", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}
::-webkit-scrollbar-track {
  background: #292a2d;
}
::-webkit-scrollbar-thumb {
  background: #636363;
  border-radius: 5px;
}
::-webkit-scrollbar-thumb:hover {
  background: #555;



}
/* Media Query */
@media (max-width: 1380px) {
  html,
  body {
    font-size: 16px;
    line-height: normal;
  }
}

